test/should-fail/检查类型-6.j
function a takes nothing returns nothing
    local handle h
    set h = a()
endfunction
